[tool.poetry]
name = "yemek-api"
version = "0.1.0"
description = ""
authors = ["Eldos <eldos.baktybekov@gmail.com>"]
readme = "README.md"
packages = [{include = "yemek_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
httpx = "^0.25.0"
bs4 = "^0.0.1"
lxml = "^4.9.3"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
